Fixed download modal spacing

--- a/public/main.css
+++ b/public/main.css
@@ -399,5 +399,5 @@ main {
 }
 
 .xpp_modal[data-type="download"] > .footer > button {
-    width: 30%;
+    width: 35%;
 }
